# vdiffuser

./: .gitignore  README.md  pyproject.toml  test_shared_tensors.py
benchmark/fastapi/: README.md  benchmark.py  locustfile.py  main.py  requirements.txt  schemas.py  utils.py
docker/: Dockerfile
docs/: README.md  dev.md
docs/modal4dev/: README.md  ssh.py
modal/: ssh.py
test/: test_openai_server.py
vdiffuser/: hf_diffusers_utils.py  launch_server.py  server_args.py  utils.py
vdiffuser/configs/: __init__.py  flux.py  qwen_image.py  sdxl.py
vdiffuser/entrypoints/: api_server.py  engine.py  engine_base.py  http_server.py
vdiffuser/entrypoints/openai/: protocol.py  serving_base.py  serving_image_edit.py  serving_image_generate.py  utils.py
vdiffuser/managers/: image_cache.py  io_struct.py  pipeline_manager.py  scheduler.py  scheduler_output_processor_mixin.py  shared_gpu_memory.py  template_manager.py  torch_shared_tensors.py  tp_worker.py
vdiffuser/managers/device_communicators/: pynccl.py
vdiffuser/metrics/: func_timer.py
vdiffuser/sampling/: sampling_params.py
